nfs_pvc.yaml


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful
  serviceName: stateful
  template:
    metadata:
      labels:
        app: stateful
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              useradd -m user1
              while true; do
                ps -awx -o pid,user,cmd --no-headers --sort=pid --format=json >> /srv/kubernetes/file1.json
                sleep 10000;
              done
          securityContext:
            runAsUser: 1000  # User id of "user1" from /etc/passwd
            runAsGroup: 1000 # Group id user1 from /etc/group
          volumeMounts:
            - name: pv-nfs
              mountPath: /srv/kubernetes
      volumes:
        - name: pv-nfs
          persistentVolumeClaim:
            claimName: nfs-pvc-claim
