sts1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful
  serviceName: stateful
  template:
    metadata:
      labels:
        app: stateful
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command:
            - /bin/sh
            - -c
          args:
            - |
              while true; do
                ps -awx>> fisiere/file1.md
                sleep 10000;
              done
          volumeMounts:
            - name: stateful-volume
              mountPath: /test/tester
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k3d-local-agent-1
  volumeClaimTemplates:
    - metadata:
        name: stateful-volume-1
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 1Gi



#volumeMounts:
#  - name: shared-volume
#    mountPath: /shared-data
