sts2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful2
  serviceName: stateful2
  template:
    metadata:
      labels:
        app: stateful2
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command:
            - /bin/sh
            - -c
          args:
            - |
              while true; do
                df -h>> fisiere/file2.md
                sleep 10000;
              done
          volumeMounts:
            - name: stateful-volume
              mountPath: /test/tester2
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k3d-local-agent-1
  volumeClaimTemplates:
    - metadata:
        name: stateful-volume
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 1Gi
