sts3.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful3
  serviceName: stateful3
  template:
    metadata:
      labels:
        app: stateful3
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command:
            - /bin/sh
            - -c
          args:
            - |   # get ip, gateway, dns, hostname 
              while true; do
                ifconfig -a>> fisiere/file3.md  
                sleep 10000;
              done
          volumeMounts:
            - name: stateful-volume
              mountPath: /test/tester3
  volumeClaimTemplates:
    - metadata:
        name: stateful-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
