sts4.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful4
  serviceName: stateful4
  template:
    metadata:
      labels:
        app: stateful4
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command:
            - /bin/sh
            - -c
          args:
            - |
              while true; do
                ps -awx>> fisiere/file4.md
                sleep 10000;
              done
          volumeMounts:
            - name: stateful-volume
              mountPath: /test/tester4
  volumeClaimTemplates:
    - metadata:
        name: stateful-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
