sts5.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful5
  serviceName: stateful5
  template:
    metadata:
      labels:
        app: stateful5
    spec:
      containers:
        - name: apache-task5
          image: petrumariuta/apache-task5:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: stateful-volume
              mountPath: /var/www/html
  volumeClaimTemplates:
    - metadata:
        name: stateful-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources: 
          requests:
            storage: 1Gi
