sts_1st.yaml
LSapiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful
  serviceName: stateful
  template:
    metadata:
      labels:
        app: stateful
    spec:
      nodeName: k3d-local-agent-1 
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command:
            - /bin/sh
            - -c
          args:
            - |
              while true; do
                ps -awx>> /fisiere/file1.md
                sleep 10000;
              done
          volumeMounts:
            - name: task5-pv-volume
              mountPath: "/test"




#volumeMounts:
#  - name: shared-volume
#    mountPath: /shared-data
