service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful5
spec:
  selector:
    app: stateful5
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
