shared-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-service
spec:
  selector:
    matchLabels:
      app: stateful
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
