ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stateful5-server-ingress
spec:
  rules:
    - host: stateful5.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stateful5
                port:
                  number: 80
  tls:
    - hosts:
        - stateful5.local
      secretName: tls-secret

#      secretName: my-tls-secret-stateful5
